[package]
name = "fuxi-cli"
version = "0.1.0"
edition = "2024"
license-file = "LICENSE"
repository = "https://github.com/ImShyMike/fuxi"
description = "dotfile organization made easy"
readme = "README.md"

[[bin]]
name = "fuxi"
path = "src/main.rs"

[dependencies]
chrono = { version = "0.4.41", features = ["serde"] }
clap = { version = "4.5.45" }
config = "0.15.14"
dirs = "6.0.0"
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.9.5"
