[package]
name = "fuxi-cli"
version = "0.1.5"
edition = "2024"
license-file = "LICENSE"
repository = "https://github.com/ImShyMike/fuxi"
description = "dotfile organization made easy"
readme = "README.md"

[[bin]]
name = "fuxi"
path = "src/main.rs"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
debug = false

[dependencies]
chrono = { version = "0.4.42", features = ["serde"] }
clap = { version = "4.5.48" }
config = "0.15.18"
dirs = "6.0.0"
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.9.7"
